--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "email": "email dev --dir src/emails"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -17,14 +18,17 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-email/components": "^0.0.28",
     "class-variance-authority": "^0.7.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-email": "^3.0.2",
     "react-international-phone": "^4.3.0",
     "react-router-dom": "^6.28.0",
+    "resend": "^4.0.1",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
