--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.2.1",
@@ -20,16 +21,17 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@react-email/components": "^0.0.28",
     "class-variance-authority": "^0.7.0",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "emailjs-com": "^3.2.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
-    "react-email": "^3.0.2",
     "react-international-phone": "^4.3.0",
     "react-router-dom": "^6.28.0",
-    "resend": "^4.0.1",
-    "tailwind-merge": "^2.5.4"
+    "tailwind-merge": "^2.5.4",
+    "use-react-countries": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
