--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-international-phone": "^4.3.0",
     "react-router-dom": "^6.28.0",
     "tailwind-merge": "^2.5.4",
