--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.18.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -33,7 +34,8 @@
     "react-international-phone": "^4.3.0",
     "react-router-dom": "^6.28.0",
     "tailwind-merge": "^2.5.4",
-    "use-react-countries": "^2.0.1"
+    "use-react-countries": "^2.0.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
