--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "email": "email dev --dir src/emails"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@react-email/components": "^0.0.28",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
@@ -31,11 +32,13 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.54.2",
     "react-international-phone": "^4.3.0",
     "react-router-dom": "^6.28.0",
     "react-social-media-embed": "^2.5.17",
     "tailwind-merge": "^2.5.4",
     "use-react-countries": "^2.0.1",
+    "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
