--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "emailjs-com": "^3.2.0",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.18.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
