--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=25.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -36,7 +39,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
-    "react-html-parser": "^2.0.2",
+    "html-react-parser": "^5.0.0",
     "react-international-phone": "^4.3.0",
     "react-router-dom": "^6.28.0",
     "react-social-media-embed": "^2.5.17",
@@ -50,7 +53,6 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.1",
     "@types/react-helmet": "^6.1.11",
-    "@types/react-html-parser": "^2.0.7",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
